#develop generalized parse-request-query
