# packages/openapi-router/src/exceptions/index.ts
@@ -1,2 +1,2 @@
-export * from './AppError';
+export * from './ServiceError';
 export * from './ValidationError';
